cc_library(
    name = "spectator",
    srcs = ["spectator/id.cc", "spectator/logger.cc", "spectator/meter.cc", 
            "spectator/publisher.cc", "spectator/registry.cc" ],
    hdrs = ["spectator/config.h", "spectator/counter.h", "spectator/dist_summary.h", 
            "spectator/gauge.h", "spectator/id.h",
            "spectator/log_entry.h", "spectator/logger.h", 
            "spectator/max_gauge.h", "spectator/meter.h", 
            "spectator/monotonic_counter.h", 
            "spectator/percentile_distribution_summary.h", "spectator/percentile_timer.h",
            "spectator/publisher.h", "spectator/registry.h", "spectator/timer.h", 
            "spectator/util.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fmtlib_fmt//:fmtlib",
        "@com_github_gabime_spdlog//:spdlog",
        "@asio//:asio",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/container:flat_hash_map",
    ]
)

cc_test(
    name = "spectator_test",
    srcs = ["spectator/counter_test.cc", "spectator/dist_summary_test.cc",
            "spectator/gauge_test.cc", "spectator/id_test.cc", "spectator/max_gauge_test.cc",
            "spectator/monotonic_counter_test.cc", 
            "spectator/perc_dist_summary_test.cc", "spectator/perc_timer_test.cc",
            "spectator/publisher_test.cc", "spectator/registry_test.cc",
            "spectator/test_server.cc", "spectator/test_server.h",
            "spectator/test_publisher.h", "spectator/timer_test.cc", "spectator/test_main.cc"],
    deps = [
        ":spectator",
        "@com_github_bombela_backward//:backward",
        "@com_google_googletest//:gtest",
    ],
)

