cc_library(
    name = "spectator",
    srcs = [
        "spectator/logger.cc",
        "spectator/publisher.cc",
    ],
    hdrs = [
        "spectator/config.h",
        "spectator/id.h",
        "spectator/logger.h",
        "spectator/measurement.h",
        "spectator/meter_type.h",
        "spectator/publisher.h",
        "spectator/registry.h",
        "spectator/stateful_meters.h",
        "spectator/stateless_meters.h",
        "spectator/valid_chars.inc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@asio",
        "@com_github_fmtlib_fmt//:fmtlib",
        "@com_github_gabime_spdlog//:spdlog",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "spectator_test",
    srcs = glob([
        "spectator/*_test.cc",
        "spectator/test_*.cc",
        "spectator/test_*.h",
    ]),
    linkopts = select({
        "@bazel_tools//src/conditions:linux_x86_64": [
            "-lbfd",
            "-ldl",
        ],
        "//conditions:default": [],
    }),
    local_defines = select({
        "@bazel_tools//src/conditions:linux_x86_64": ["BACKWARD_HAS_BFD=1"],
        "//conditions:default": [],
    }),
    deps = [
        ":spectator",
        "@com_github_bombela_backward//:backward",
        "@com_google_googletest//:gtest",
    ],
)
